feat: Add POS ticket printing and shift management
Introduces functionality for printing POS tickets and managing work shifts.

- **Ticket Printing:**
  - Adds jsPDF dependency for PDF generation.
  - Implements print styles in `index.html` to target a specific ticket element.
  - Creates a hidden `div` (`#pos-ticket-print`) to hold ticket content for printing.
  - Enhances `Ticket` type with `sellerName` and `clientRemainingCredit` for richer ticket data.
  - Adds placeholder functions and UI elements in `POS.tsx` to initiate ticket printing.
  - Defines `getTicketHTML` to generate ticket content from `Ticket` data.

- **Shift Management:**
  - Updates `types.ts` to define the `Shift` interface with detailed properties for shift tracking (opened/closed by, cash amounts).
  - Modifies `StoreContextType` and `StoreContext.tsx` to integrate shift management:
    - `activeShift` now correctly typed as `Shift | null` and initialized from localStorage.
    - `openShift` and `closeShift` signatures updated to accept `Record<string, number>` for cash and `string` for the closer's name.
  - Adds a new `ShiftManager` page for managing shifts (implicitly, details to follow).
  - Updates relevant context functions to use the new shift management types and logic.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -45,6 +46,26 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #94a3b8; 
       }
+
+      /* Print Styles for POS Tickets */
+      @media print {
+        body * { visibility: hidden; }
+        #pos-ticket-print, #pos-ticket-print * { visibility: visible; }
+        #pos-ticket-print { 
+          position: absolute; 
+          left: 0; 
+          top: 0; 
+          width: 80mm; 
+          padding: 5mm;
+          font-family: 'Courier New', Courier, monospace;
+          color: black !important;
+          background: white !important;
+        }
+        @page {
+          size: 80mm auto;
+          margin: 0;
+        }
+      }
     </style>
   <script type="importmap">
 {
@@ -53,13 +74,16 @@
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "jspdf": "https://esm.sh/jspdf@2.5.1"
   }
 }
 </script>
 </head>
   <body class="bg-gray-50 text-slate-900 font-sans antialiased overflow-hidden">
     <div id="root"></div>
+    <!-- Hidden container for printing tickets -->
+    <div id="pos-ticket-print" class="hidden"></div>
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
