--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
     <div id="root"></div>
     <!-- Hidden container for printing tickets -->
     <div id="pos-ticket-print" class="hidden"></div>
+    
+    <!-- Entry point script for React/Vite -->
+    <script type="module" src="/index.tsx"></script>
+
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
